--- a/d3_crossfilter_2/chicago.html
+++ b/d3_crossfilter_2/chicago.html
@@ -39,138 +39,108 @@
   </main>
   <script type="text/javascript">
 
-
-	// Create the dc.js chart objects & link to div
-	var chartTable = dc.dataTable('#dc-table-graph');
-
 	// load data from a csv file
 	d3.csv("data/chicago_crimes_sep_2018.csv").then(function (data) {
-
-	  // format our data
-	  data.forEach(function(d){
-	  	d.Latitude = +d.Latitude;
-	  	d.Longitude = +d.Longitude;
-	  	d.Date = (d3.utcParse("%D %r"))(d.Date);
-	  });
 
 	  let colorScale = d3.scaleOrdinal() 
         .domain(["HOMICIDE", "ROBBERY", "BURGLARY"]) 
         .range(["#ca0020", "#0571b0", "#fdae61"]);
+	  // format our data
+	  data.forEach(function(d){
+	  	d.Latitude = +d.Latitude;
+	  	d.Longitude = +d.Longitude;
+	  	d.Date = (d3.utcParse("%m/%d/%Y %H:%M:%S %p"))(d.Date);
+	  	d.Day = d3.timeDay(d.Date);
+	  	d.Type = d['Primary Type'];
+	  	d.Color = colorScale(d.Type);
+	  });
 
-	  // Run the data through crossfilter and load our 'facts'
 	  var facts = crossfilter(data);
 
 	   let dateDimension = facts.dimension(function(d){
-	            return d.dtg;
+	            return d.Day;
 	        });
 
-	   chartTable.width(960)
-                        .height(800)
-                        .dimension(dateDimension)
-                        .group(function (d) { return "Earthquake Table";})
-                        .size(10)
-                        .columns(['dtg','magnitude','depth','latitude','longitude'])
-                        .sortBy(function(d){return d.dtg;})
-                        .order(d3.ascending);
-
-	  //Create a dimension for Magnitude
-	  let magDimension = facts.dimension(function(d){
-	            return d.magnitude;
+	  let typeDimension = facts.dimension(function(d){
+	            return d.Type;
 	        });
 
-	  //Create a group for Magnitude that just counts the number of elements in the group
-	  let magnitudeGroup = magDimension.group();
+	  let typeGroup = typeDimension.group();
 
-	  // Create a dimension for Depth
-		let depDimension = facts.dimension(function(d){
-	            return d.depth;
-	        });
-	  //Create a group for Depth that just counts the number of elements in the group
-	  let depthGroup = depDimension.group();
+	  var dateTypeDimension = facts.dimension(function(d){
+	  	return [d.Type, d.Day];
+	  		});
+
+	  var dateTypeGroup = dateTypeDimension.group().reduceCount();
 
 
-	  // Create a dimension just for the hour from the datetime in the dataset
-	  //hint: use d3.time.hour() function
-	  let hourDimension = facts.dimension(function(d){
-	  	return d3.timeHour(d.dtg);
-	  });
 
-
-	  //Create a group for the hour dimension that just counts the number of elements per hour
-		let hourGroup = hourDimension.group();
-
-	  // Setup the charts
-	  var chartMagnitude = dc.barChart('#magnitude-chart');
-	  var chartTime = dc.lineChart("#time-chart");
-
-	  let map = L.map('mapid').setView([41.87,-87.66], 11); 
+	  let map = L.map('mapid').setView([41.87,-87.66], 10); 
 	  L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', { 
 		  attribution: 'Map tiles by Carto, under CC BY 3.0. Data by OpenStreetMap, under ODbL.', maxZoom: 17 
 	  }).addTo(map);
 
 	  data.forEach(function(d){
-	  	let c  = 255 - 255*(d.depth/100);
-	  	let circle = L.circle([d.latitude, d.longitude], 3000*d.magnitude, { 
+	  	let circle = L.circle([d.Latitude, d.Longitude], 100, { 
                        color: '#fd8d3c', 
                        weight: 2, 
-                       fillColor: 'rgb(255,'+c+','+c+')', 
+                       fillColor: d.Color, 
                        fillOpacity: 0.5 
           });
-	  	circle.bindPopup("Magnitude: "+d.magnitude+'\nDepth: '+d.depth+'\nTime: '+d.dtg+'\n');
+	  	circle.bindPopup("Description: "+d.Description+'\nDate: '+d.Date+'\nAddress: '+d.Block+', '+d.IUCR+'\n');
 	  	circle.addTo(map);
 	  });
+
+
+	  // Setup the charts
+	  var chartTotal = dc.barChart('#total-chart');
+	  var chartTime = dc.seriesChart('#time-chart');
 
 	  // Configure Magnitude Bar Graph
 	  // 480 x 150
 	  // x dimension domain: [0.5, 8]
 	  //use a gap of 65, this number is very obscure. It seems to depend on the width of the chart and on the number of dimensions. It was found using trial and error.
 	  //set elasticY to true
-	   chartMagnitude.width(480)
+	   chartTotal.width(480)
                         .height(150)
-                        .x(d3.scaleLinear().domain([0,8]))
+                        .x(d3.scaleBand())
+                        .xUnits(dc.units.ordinal)
                         .renderHorizontalGridLines(true)
-                        .dimension(magDimension)
+                        .dimension(typeDimension)
                         .gap(56)
-                        .xAxisLabel('Magnitude')
+                        .xAxisLabel('Type')
                         .yAxisLabel('Frequency')
                         .elasticY(true)
-                        .group(magnitudeGroup)
-                        .mouseZoomable(true)
-                        .ordinalColors(['steelblue']);
+                        .group(typeGroup)
+                        .mouseZoomable(false)
+                        .colors(colorScale)
+                        .colorAccessor(function(d){
+                        	return d.key;
+                        });
 	  	
-
-	  // Configure Depth bar graph
-	  // 480 x 150
-	  // x dimension domain: [0, 100]
-
-	  chartDepth.width(480)
-                        .height(150)
-                        .x(d3.scaleLinear().domain([0,100]))
-                        .renderHorizontalGridLines(true)
-                        .dimension(depDimension)
-                        .gap(56)
-                        .xAxisLabel('Depth')
-                        .yAxisLabel('Frequency')
-                        .elasticY(true)
-                        .group(depthGroup)
-                        .mouseZoomable(true)
-                        .ordinalColors(['steelblue']);
-	 
 	  // Configure Time line graph
 	  // height: 150
 	  //x dimension: build the time scale from the data: d3.time.scale().domain(d3.extent(data, function(d) { return d.dtime; }))
-	  chartTime.width(1060)
-                        .height(150)
-                        .x(d3.scaleTime().domain(d3.extent(data, function(d) { return d.dtg; })))
-                        .dimension(hourDimension)
-                        .xAxisLabel('Hour')
-                        .yAxisLabel('Frequency')
-                        .elasticY(true)
-                        .group(hourGroup)
-                        .mouseZoomable(true)
-                        .ordinalColors(['steelblue']);
 
-
+	  chartTime.width(480)
+                     .height(150)
+                     .dimension(dateTypeDimension)
+                     .chart(function(c) { 
+					      return dc.lineChart(c).interpolate('cardinal').evadeDomainFilter(true); 
+					   })
+                     .x(d3.scaleTime().domain(d3.extent(data, function(d) { return d.Day; })))
+                     .xAxisLabel('Day')
+                     .yAxisLabel('Frequency')
+                     .group(dateTypeGroup)
+                     .elasticY(true)
+                     .brushOn(false)    
+                     .seriesAccessor(function(d) { return d.key[0]; })
+				     .keyAccessor(function(d) { return d.key[1]; })
+				     .valueAccessor(function(d) { return d.value; })
+				     .colors(colorScale)
+				     .colorAccessor(function(d){ return d.key[0]; });
+	    chartTime.xAxis().ticks(6).tickFormat(d3.timeFormat('%d/%m'));
+		
 	  // Render the Charts
 	  dc.renderAll();
 
