--- a/d3_crossfilter/acoes.html
+++ b/d3_crossfilter/acoes.html
@@ -53,6 +53,7 @@
                      .x(xScale)
                      .xUnits(d3.timeDays)
                      .elasticY(true)
+                     .legend(dc.legend().x(700).y(5).itemHeight(13).gap(5))
                      .renderHorizontalGridLines(true)
                      .mouseZoomable(true)   
                      .compose([
