--- a/color-d3/crimes.html
+++ b/color-d3/crimes.html
@@ -62,6 +62,7 @@
 </div>
 <script type="text/javascript" src="data/bairros.js"></script>
 <script type="text/javascript">
+
     let blues = d3.schemeBlues[5];
 	
 	let map = L.map('map').setView([-3.792614,-38.515877], 12);
@@ -141,27 +142,17 @@
 	let populationByName = d3.map();
     let homicidiosByName = d3.map();
 
-    
+    let promises = [d3.csv("data/populacao_fort.csv", function(d){ populationByName.set(d.Bairro.toUpperCase(),+d.Total/100000); }), 
+    				d3.csv("data/homicidios_2012.csv", function(d){ homicidiosByName.set(d.Bairro,(+d.Homicidios)/populationByName.get(d.Bairro)); })]
 
-    d3.csv("data/populacao_fort.csv").then(function(data){
-		data.forEach(function(d){
-			populationByName.set(d.Bairro.toUpperCase(),+d.Total/100000);
-		});
-	});	
+    Promise.all(promises).then(ready);
 
-	d3.csv("data/homicidios_2012.csv").then(function(data){
-        //format data
-        data.forEach(function(d) {
-            homicidiosByName.set(d.Bairro,(+d.Homicidios)/populationByName.get(d.Bairro));
-        });
-		
-		//bairrosData is defined in file bairros.js		 		
-		geojson = L.geoJson(bairrosData, {
+    function ready(){
+    	geojson = L.geoJson(bairrosData, {
 				style: style,
 				onEachFeature: onEachFeature
 		}).addTo(map);
-		
-	});
+    }
 			
 	
 	let legend = L.control({position: 'bottomright'});
