--- a/d3_interactive/usa.html
+++ b/d3_interactive/usa.html
@@ -122,8 +122,8 @@ function ready([us]) {
 
         var coordinates = [0,0];
         coordinates = d3.mouse(this);
-        var x = coordinates[0] + 10;
-        var y = coordinates[1] + 20;
+        var x = coordinates[0];
+        var y = coordinates[1];
 
         showTooltip(d.id,x,y);
       })
