--- a/project/project.html
+++ b/project/project.html
@@ -19,38 +19,30 @@
 <body>
   <main role="main" class="container">
   	<div class='row'>
+   		<div id="smenu" class='col-6'>
+   		</div>
+   		<div id="smenu2" class='col-6'>
+   		</div>
+    </div>
+  	<div class='row'>
     	<div id='chart1' class='col-6'>
     	</div>
     	<div id='chart2' class='col-6'>
     	</div>
     </div>
     <div class='row'>
-   		<div id='chart3' class='col-6'>
-    	</div>
-    	<div id='chart4' class='col-6'>
-    	</div>
-    </div>
+	    <div id='chart5'>
+	   	</div>
+	</div>
     <div class='row'>
-   		<div id="cbox1" class='col-6'>
-		    <div>
-		      <a class='reset'
-		         href='javascript:cbox1.filterAll();dc.redrawAll();'
-		         style='visibility: hidden;'>reset</a>
-		    </div>
+   		<div id="smenu3" class='col-1'>
    		</div>
-    	<div id="cbox2" class='col-6'>
-		    <div>
-		      <a class='reset'
-		         href='javascript:cbox2.filterAll();dc.redrawAll();'
-		         style='visibility: hidden;'>reset</a>
-		    </div>
+   		<div id='chart3' class='col-5'>
+    	</div>
+    	<div id='chart4' class='col-5'>
     	</div>
     </div>
-    <div id='chart5'>
-   	</div>
    	<div id='chart7'>
-   	</div>
-   	<div id='chart6'>
    	</div>
 	<table class="table table-hover" id="table">
         <thead>
@@ -68,14 +60,15 @@
   </main>
   <script type="text/javascript">
 	var qTable = dc.dataTable('#table');
-	var cbox1 = dc.cboxMenu('#cbox1');
-	var cbox2 = dc.cboxMenu('#cbox2');
+	var smenu = dc.selectMenu('#smenu');
+	var smenu2 = dc.selectMenu('#smenu2');
+	var smenu3 = dc.selectMenu('#smenu3');
+	var anos = []
+	var tipos = []
+	var questoes = []
 
 	// load data from a csv file
 	d3.csv("data/questao.csv").then(function (data) {
-
-		var anos = new Set();
-		var total = 0;
 
 		  // format our data
 		data.forEach(function(d){
@@ -85,11 +78,18 @@
 			d.d = +d.d;
 			d.dt = +d.dt;
 			d.nsa = +d.nsa;
-			anos.add(+d.ano);
-		});
+			if(!anos.includes(d.ano))
+				anos.push(d.ano);
 
+			if(!tipos.includes(d.tipo))
+				tipos.push(d.tipo);
+
+			if(!questoes.includes(d.q))
+				questoes.push(d.q);
+		});
 		// Run the data through crossfilter and load our 'facts'
 		var facts = crossfilter(data);
+		var facts2 = crossfilter(data);
 
 
 		let qDimension = facts.dimension(function(d){
@@ -97,56 +97,51 @@
 			});
 		let anoDimension = facts.dimension(function(d){
 				return d.ano;
-			});
+			});	
 		let tipoDimension = facts.dimension(function(d){
 				return d.tipo;
 			}); 
-		let qAnoDimension = facts.dimension(function(d){
-				return [+d.q,+d.ano];
+		let anoTipoDimension = facts.dimension(function(d){
+				return [d.ano,d.tipo];
 			});
-	    let ctDimension = facts.dimension(function(d){
-	            return d.ct;
-	        });
-	    let cDimension = facts.dimension(function(d){
-	            return d.c;
-	        });
-	    let dDimension = facts.dimension(function(d){
-	            return d.d;
-	        });
-	    let dtDimension = facts.dimension(function(d){
-	            return d.dt;
-	        });
-	    let nsaDimension = facts.dimension(function(d){
-	            return d.nsa;
-	        });
+		let qAnoDimension = facts.dimension(function(d){
+				return [+d.q,d.ano];
+			});
 
 	   qTable.width(960)
         .height(800)
         .dimension(qDimension)
-        .group(function (d) { return `${d.ano}, ${d.tipo}`;})
+        .group(function (d) { return `${d.ano}, ${d.tipo}s`;})
         .size(10)
         .columns(['ques','ct','c','d','dt','nsa'])
         .sortBy(function(d){return +d.q;})
-        .size(12*anos.size)	
+        .size(12*anos.length*tipos.length)	
         .order(d3.ascending);
 
-		cbox1
-		.dimension(anoDimension)
-		.group(anoDimension.group())
-		.multiple(true)
-		.controlsUseVisibility(true);
-		cbox2
+		smenu
 		.dimension(tipoDimension)
 		.group(tipoDimension.group())
-		.multiple(true)
-		.controlsUseVisibility(true);
+		.multiple(false)
+		.controlsUseVisibility(true)
+		.title(function(d){
+			if( d.key==='discente')
+				return `Discentes`;
+			return `Docentes`;
+		})
+        .chartGroup('g1');
+
+        smenu2
+		.dimension(anoDimension)
+		.group(anoDimension.group())
+		.multiple(false)
+		.controlsUseVisibility(true)
+		.title(function(d){
+			return d.key;
+		})
+        .chartGroup('g1');
 
 
-	  let ctGroup = ctDimension.group();
-	  let cGroup = cDimension.group();
-	  let dGroup = dDimension.group();
-	  let dtGroup = dtDimension.group();
-	  let nsaGroup = nsaDimension.group();
+
 
 	  let ctByQ = qDimension.group().reduceSum(function(d){
                 return (d.ct+d.c);
@@ -165,7 +160,7 @@
 	  		});
 	  
 	  // Setup the charts
-	  var chart1 = dc.barChart('#chart1');
+	  var chart1 = dc.barChart('#chart1','g1');
 
 	   chart1.width(480)
                         .height(200)
@@ -180,7 +175,8 @@
                         .group(ctByQ)
                         .barPadding(0.1)
                         .outerPadding(1)
-                        .ordinalColors(['steelblue']);
+                        .ordinalColors(['steelblue'])
+                        .chartGroup('g1');
 
         var chart2 = dc.barChart('#chart2');
 
@@ -197,44 +193,84 @@
                         .group(dtByQ)
                         .barPadding(0.1)
                         .outerPadding(1)
-                        .ordinalColors(['darkorange']);
+                        .ordinalColors(['darkorange'])
+                        .chartGroup('g1');
 
+        let qTipoAnoDimension = facts2.dimension(function(d){
+				return [+d.q,d.tipo,d.ano];
+			});
 
+        let ctByQTipoAno = qTipoAnoDimension.group().reduceSum(function(d){
+	  			return (d.ct+d.c);
+	  		});
+
+	  let dtByQTipoAno = qTipoAnoDimension.group().reduceSum(function(d){
+	  			return (d.dt+d.d);
+	  		});
+
+	  let qDimension2 = facts2.dimension(function(d){
+				return +d.q;
+			});
+
+	    smenu3
+		.dimension(qDimension2)
+		.group(qDimension2.group())
+		.multiple(true)
+		.controlsUseVisibility(false)
+		.title(function(d){
+			return d.key;
+		})
+        .chartGroup('g2');
+        var colors = d3.scaleOrdinal(d3.schemePaired);
         var chart3 = dc.seriesChart('#chart3');
 
         chart3.width(480)
                      .height(150)
-                     .dimension(qAnoDimension)
+                     .dimension(qTipoAnoDimension)
                      .chart(function(c) { 
-					      return dc.lineChart(c).curve(d3.curveLinear).evadeDomainFilter(true); 
+					      return dc.lineChart(c).curve(d3.curveLinear).evadeDomainFilter(true)
+				     	.renderDataPoints({fillOpacity: 0.01, strokeOpacity: 1, radius: 2	}); 
 					   })
                      .x(d3.scaleOrdinal().domain(d3.extent(data, function(d) { return +d.ano; })))
                      .xAxisLabel('Year')
                      .yAxisLabel('% CT + C')
-                     .group(ctByQAno)
+                     .group(ctByQTipoAno)
                      .elasticY(true)
-                     .brushOn(false)   
-                     .seriesAccessor(function(d) { return d.key[0]; })
-				     .keyAccessor(function(d) { return d.key[1]; })
-				     .valueAccessor(function(d) { return d.value; });
+                     .brushOn(false)
+                     .seriesAccessor(function(d) { return[ d.key[0],d.key[1]]; })
+				     .keyAccessor(function(d) { return d.key[2]; })
+				     .valueAccessor(function(d) { return d.value; })
+				     .colors(function(d) {
+				     	return colors(d.split(',')[0]);})
+				     .title(function(d){
+				     	return d.key[1];
+				     })
+				     .chartGroup('g2');
 
 		var chart4 = dc.seriesChart('#chart4');
+		//console.log([''].concat(d3.extent(data, function(d) { return +d.ano; })).concat(['']));
 
         chart4.width(480)
                      .height(150)
-                     .dimension(qAnoDimension)
+                     .dimension(qTipoAnoDimension)
                      .chart(function(c) { 
 					      return dc.lineChart(c).curve(d3.curveLinear).evadeDomainFilter(true); 
 					   })
                      .x(d3.scaleOrdinal().domain(d3.extent(data, function(d) { return +d.ano; })))
                      .xAxisLabel('Year')
                      .yAxisLabel('% DT + D')
-                     .group(dtByQAno)
+                     .group(dtByQTipoAno)
                      .elasticY(true)
                      .brushOn(false)    
-                     .seriesAccessor(function(d) { return d.key[0]; })
-				     .keyAccessor(function(d) { return d.key[1]; })
-				     .valueAccessor(function(d) { return d.value; });
+                     .seriesAccessor(function(d) { return [d.key[0],d.key[1]]; })
+				     .keyAccessor(function(d) { return d.key[2]; })
+				     .valueAccessor(function(d) { return d.value; })
+				     .colors(function(d) {
+				     	return colors(d.split(',')[0]);})
+				     .title(function(d){
+				     	return d.key[1];
+				     })
+				     .chartGroup('g2');
 
 		var chart5 = dc.scatterPlot('#chart5');
 
@@ -248,6 +284,8 @@
 		    .x(d3.scaleLinear().domain(d3.extent(data, function(d) { return +d.ct+d.c; })))
 		    .brushOn(false)
 		    .symbolSize(8)
+		    .renderHorizontalGridLines(true)
+		    .renderVerticalGridLines(true)
 		    .clipPadding(10)
 		    .xAxisLabel('CT+C')
             .yAxisLabel('DT+D')
@@ -255,16 +293,12 @@
 		    .title(function(d){
 		    	return `Question ${d.key[2]}, year ${d.key[3]}, ${d.key[4]}`;
 		    })
-			.colorAccessor(function(d){ return d.key[3]; })
+			.colorAccessor(function(d){ return '(255,255,255)'; })
 			.symbol(function(d){
-				if( d.key[4]==='discente'){
-					return d3.symbolCircle;
-				}
-				else{
-					return d3.symbolDiamond;
-				}
+				return d3.symbolDiamond;
 			})
-		    .group(extDimension.group());
+		    .group(extDimension.group())
+		    .chartGroup('g1');
 			
 		var chart7 = dc.scatterPlot('#chart7');
 
@@ -297,34 +331,75 @@
 			})
 		    .group(dumDimension.group());
 
-		
-
-		var chart6 = dc.pieChart('#chart6');
-
-		chart6
-	    .width(960)
-	    .height(400)
-	    .slicesCap(4)
-	    .innerRadius(100)
-	    .dimension(qDimension)
-	    .group(qDimension.group().reduceSum(function(d){
-	    	return d.nsa/anos.size;
-	    }))
-	    .legend(dc.legend())
-	    // workaround for #703: not enough data is accessible through .label() to display percentages
-	    .on('pretransition', function(chart) {
-	        chart.selectAll('text.pie-slice').text(function(d) {
-	        	if(d.data.key !== 'Others'){
-	        		return 'Questão '+ d.data.key + ': ' + dc.utils.printSingleValue((d.endAngle - d.startAngle) / (2*Math.PI) * 100) + '%';
-	        	}
-	            return d.data.key + ': ' + dc.utils.printSingleValue((d.endAngle - d.startAngle) / (2*Math.PI) * 100) + '%';
-	        })
-	    });
 
 	  // Render the Charts
-	  
+	  dc.renderAll('g1');
+	  dc.renderAll('g2');
+	  qTable.render();
 	  dc.renderAll();
-	});
+
+	  d3.selectAll('option:not(.dc-select-option)').attr('disabled','disabled').attr('hidden','hidden');
+
+	  smenu.onChange(tipos[0]);
+	  smenu2.onChange(anos[0]);
+	  smenu3.onChange(1);
+	  d3.select('#chart5').selectAll('path.symbol').style('fill','rgb(0,0,0)');
+
+	  d3.selectAll('g.dc-tooltip-list').select('g.dc-tooltip').each(function(d){
+	  	let g = d3.select(this);
+	  	let x, y, c, n, t, q;
+	  	g.selectAll('circle.dot').each(function(d){
+	  		q = d.data.key[0];
+	  		n = d3.select(this).node();
+	  		x = n.getAttribute('cx');
+	  		y = n.getAttribute('cy');
+	  		c = n.getAttribute('fill');
+	  		t = d3.select(this).select('title').html();
+	  		g.append('path').attr('class','symbol side_'+x).attr('transform',`translate(${x},${y})`)
+	  		 .style('fill',`${c}`).attr('d',function(d){
+	  		 	if(t==='discente'){
+	  		 		t = 'Discente';
+	  		 		return 'M0,-7.444838872816797L4.298279727294168,0L0,7.444838872816797L-4.298279727294168,0Z';
+	  		 	}
+	  		 	t = 'Docente';
+	  		 	return 'M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0'
+	  		 })
+	  		 .append('title').text(t + ', Questão '+q);
+	  	})
+	  });
+
+	  chart3.on('renderlet',function(d){
+	  	d3.selectAll('g.dc-tooltip-list').select('g.dc-tooltip').each(function(d){
+		  	let g = d3.select(this);
+		  	let x, y, c, n;
+		  	g.selectAll('circle.dot').each(function(d){
+		  		n = d3.select(this).node();
+		  		x = n.getAttribute('cx');
+		  		y = n.getAttribute('cy');
+		  		c = n.getAttribute('fill');
+		  		g.select('path.side_'+x).attr('transform',`translate(${x},${y})`);
+		  	})
+		  });
+	  });
+
+	  chart4.on('renderlet',function(d){
+	  	d3.selectAll('g.dc-tooltip-list').select('g.dc-tooltip').each(function(d){
+		  	let g = d3.select(this);
+		  	let x, y, c, n;
+		  	g.selectAll('circle.dot').each(function(d){
+		  		n = d3.select(this).node();
+		  		x = n.getAttribute('cx');
+		  		y = n.getAttribute('cy');
+		  		c = n.getAttribute('fill');
+		  		g.select('path.side_'+x).attr('transform',`translate(${x},${y})`);
+		  	})
+		  });
+	  });
+	  //qTipoAnoDimension.filterFunction(function(d){
+	  //	return (d[0]==Math.abs(d3.select('#smenu3').select('select').node().selectedIndex));
+	  //});
+	 });
+
 	</script>
 	 <!-- Bootstrap javascript files -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
